<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/fon_register"
    android:id="@+id/root_element"
    tools:context=".RegistrationActivity">


    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageViewVVA"
            android:layout_width="126dp"
            android:layout_height="123dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/logo"
            android:foregroundGravity="top"
            app:srcCompat="@drawable/logo_white" />

        <ImageView
            android:id="@+id/imageViewRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:srcCompat="@drawable/registration"
            android:contentDescription="@string/regisration_text_view" />

        <EditText
            android:id="@+id/nameRegistration"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:background="@color/area_input"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/text_input_regist"
            android:textColorHint="@color/text_input_regist" />

        <EditText
            android:id="@+id/surnaimRegistration"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:background="@color/area_input"
            android:ems="10"
            android:hint="@string/surname"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/text_input_regist"
            android:textColorHint="@color/text_input_regist" />

        <EditText
            android:id="@+id/emailRegistration"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:background="@color/area_input"
            android:hint="@string/e_mail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_input_regist"
            android:textColorHint="@color/text_input_regist" />

        <EditText
            android:id="@+id/passWordRegistration"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:background="@color/area_input"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/text_input_regist"
            android:textColorHint="@color/text_input_regist" />


        <EditText
            android:id="@+id/phoneRegistration"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:background="@color/area_input"
            android:ems="10"
            android:hint="@string/phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textColor="@color/text_input_regist"
            android:textColorHint="@color/text_input_regist" />

        <Button
            android:id="@+id/userRegistrationButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:background="@color/colorAccent"
            android:onClick="registrationUser"
            android:text="@string/registration"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>