<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigationAdminActivity"
    android:background="@color/fon_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/addPhotos"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/add_photo"
            android:textColor="@color/text_input_area_sign"
            tools:ignore="MissingConstraints"
            android:onClick="openAddPhotos"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            android:text="@string/partfol"
            android:textColor="@color/text_input_area_sign"
            tools:ignore="MissingConstraints"
            android:onClick="openPortfolio"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            android:text="@string/add_date"
            android:textColor="@color/text_input_area_sign"
            tools:ignore="MissingConstraints"
            android:onClick="openCalendarView"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            android:text="@string/add_price"
            android:textColor="@color/text_input_area_sign"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            android:text="@string/date_recervation"
            android:textColor="@color/text_input_area_sign"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>