<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlactivityad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fon_register"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078"
        tools:layout_editor_absoluteX="-16dp">

        <Button
            android:id="@+id/button_choose_image"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:background="@color/button_input"
            android:text="@string/button_choose_image"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edit_text_file_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@color/area_input"
            android:hint="@string/title_photo"
            android:layout_margin="8dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="@color/text_input_regist" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:contentDescription="@string/image_choosed" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_margin="8dp"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_upload"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:background="@color/button_input"
            android:gravity="center"
            android:text="@string/upload_in_firebase"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/text_view_show_uploads"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/portfolio_upload_image_view"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>